--- a/public/css/style.css
+++ b/public/css/style.css
@@ -799,6 +799,10 @@ table.table .avatar {
     height: 60px;
 }
 
+.gray-div{
+    background-color:#333333!important;
+}
+
 
 
 
@@ -1492,9 +1496,6 @@ table.table .avatar {
 
 .therichpost-teal,.therichpost-hover-teal:hover{
     color:#fff!important;background-color:#009688!important
-}
-.therichpost-gray,.therichpost-hover-gray:hover{
-    background-color:#333333!important
 }
 
 .therichpost-yellow,.therichpost-hover-yellow:hover{
